media query now formats correctly on small devices

--- a/assets/style.css
+++ b/assets/style.css
@@ -18,32 +18,6 @@ header {
     padding: 10px;
 }
 
-@media only screen and (max-width: 600px) {
-
-    ul {
-        display: flex;
-        flex-direction: column;
-        align-content: center;
-        
-    }
-
-    nav ul li {
-        text-align: center;
-        padding: 10px;
-        border-color: white;
-        border: 5px;
-    }
-
-    .about-me {
-        display: flex;
-        width: 100%;
-        height: 65vh;
-        flex-direction: column;
-        align-items: center;
-    }
-    
-}
-
 nav {
     text-style: none;
 
@@ -89,6 +63,7 @@ a:hover {
 }
 
 .picture {
+    display: block;
     max-width: 100%;
     height: auto;
     opacity: 0.6;
@@ -181,7 +156,7 @@ a:hover {
 }
 
 .project-picture {
-
+    display: inline-block;
 }
 
 .placeholder {
@@ -196,3 +171,40 @@ footer {
     background-color: black;
     color: #f8f4e3;
 }
+
+@media only screen and (max-width: 600px) {
+
+    ul {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        
+    }
+
+    nav ul li {
+        text-align: center;
+        padding: 10px;
+        border-color: white;
+        border: 5px;
+    }
+
+    .about-me {
+        box-sizing: border-box;
+        display: block;
+        width: 100%;
+        height: auto;
+        flex-direction: column-reverse;
+        justify-content: center;
+    }
+
+    .flex-left, .flex-right {
+        display: block;
+        flex-direction: column;
+        height: auto;
+        width: auto;
+    }
+    
+}
+
+
+
